# cargo-agent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRICING.md  README.md  SERVICES.md  backtest.rs  backtest_final.py  backtest_maotai.py  bt.py  cargo-agent-presentation.html  cargo-agent-presentation.md  config.yaml  index.html  maotai_data.json  memory.json  moutai_data.csv  sh000001_tencent_daily.csv  tencent_data.csv  tencent_data_fixed.csv  tencent_test.csv
.cargo-agent/: preferences.json
.claude/memory/: MEMORY.md  cargo-agent-architecture.md  cargo-agent-config-and-conventions.md  cargo-agent-hooks-metrics-health.md  cargo-agent-memory-and-skills.md  cargo-agent-model-client.md  cargo-agent-project-overview.md  cargo-agent-tool-system.md  cargo-agent-trading-module.md
.claude/workflows/: project-code-review.js
.github/ISSUE_TEMPLATE/: consulting.md
.github/workflows/: ci.yml
cloudsilk/: .gitignore  Cargo.toml  README.md
cloudsilk/src/: main.rs
docs/: index.html  self_evolution.md
docs/site/: index.html
examples/: qqq_backtest.rs  qqq_timeframe.rs
examples/mcp-client-demo/: Cargo.toml
examples/mcp-client-demo/src/: main.rs
examples/net-tools/: Cargo.toml  README.md
examples/net-tools/src/: cert.rs  lib.rs  main.rs  pool.rs  proxy.rs  socks5.rs  tunnel.rs
examples/net-tools/tests/: integration_tests.rs
examples/task-manager-api/: Cargo.toml  README.md  task_manager.db
examples/task-manager-api/migrations/: 001_create_tasks.sql
examples/task-manager-api/src/: db.rs  errors.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs
examples/task-manager-api/tests/: integration_tests.rs
examples/tauri-dev-tools/: README.md
examples/tauri-dev-tools/src/: index.html  main.js  style.css
examples/tauri-dev-tools/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-dev-tools/src-tauri/capabilities/: default.json
examples/tauri-dev-tools/src-tauri/icons/: .gitkeep
examples/tauri-dev-tools/src-tauri/src/: lib.rs  main.rs
lingerie-shop/: Cargo.toml  README.md
lingerie-shop/migrations/: 001_init.sql
lingerie-shop/src/: auth.rs  db.rs
lingerie-shop/src/models/: cart.rs  mod.rs  order.rs  product.rs  user.rs
lingerie-shop/src/routes/: admin.rs  cart.rs  mod.rs  order.rs  page.rs  product.rs  user.rs
lingerie-shop/src/templates/: base.html  cart.html  checkout.html  index.html  login.html  order_detail.html  orders.html  product_detail.html  products.html  profile.html  register.html
lingerie-shop/src/templates/admin/: base.html  dashboard.html  orders.html  products.html
print-pack-site/: Cargo.toml  README.md
print-pack-site/src/: main.rs  models.rs
printpack/: Cargo.toml  README.md  askama.toml
printpack/i18n/: en.yml  zh.yml
printpack/migrations/: 001_create_users.sql  002_create_products.sql  003_create_quotes.sql  004_create_orders.sql  005_create_cart.sql
printpack/src/: db.rs  main.rs
printpack/src/handlers/: cart.rs  mod.rs  order.rs  product.rs  user.rs
printpack/src/i18n/: mod.rs
printpack/src/middleware/: i18n.rs
printpack/src/models/: cart.rs  mod.rs  order.rs  product.rs  user.rs
printpack/static/css/: style.css
printpack/templates/: about.html  base.html  checkout.html  contact.html  home.html  login.html  product_detail.html  products.html  quote.html  register.html
printpack/templates/cart/: cart.html
printpack/templates/orders/: detail.html  list.html
quantitative-trading/: Cargo.toml  maotai_strategy_ranking.json  strategy_ranking.json  trades.json
quantitative-trading/src/: advanced_indicators.rs  backtest.rs  data.rs  enhanced_backtest.rs  feature_engineering.rs  indicators.rs  main.rs  market_regime.rs  param_optimizer.rs  report.rs  risk_management.rs  strategy.rs
skill-packs/: SKILL_PACKS.md
skill-packs/cross-border/: cross-border-ecommerce.yaml
skill-packs/finance/: financial-comps.yaml  financial-dcf.yaml  financial-lbo.yaml
skill-packs/go/: go-web-services.yaml
skill-packs/python/: python-automation.yaml  python-data-science.yaml  python-fastapi.yaml
skill-packs/security/: security-pentest.yaml
skill-packs/typescript/: typescript-fullstack.yaml  typescript-nextjs.yaml
src/: backtest_maotai.rs  cli_commands.rs  constants.rs  goal_manager.rs  health.rs  hooks.rs  lib.rs  loop_manager.rs  main.rs  metrics.rs
src/agent/: core.rs
src/config/: env.rs  mod.rs  schema.rs
src/gateway/: mod.rs  tools.rs
src/mcp/: adapter.rs  bridge.rs  client.rs  errors.rs  mod.rs  server.rs  transport.rs  types.rs
src/memory/: mod.rs  sqlite_store.rs
src/model/: client.rs  router.rs
src/plugin/: marketplace.rs
src/skills/: mod.rs
src/state/: mod.rs
src/tools/: mod.rs  registry.rs  utils.rs
src/tools/builtin/: archive_tool.rs  ast_analyzer.rs  async_profiler.rs  async_profiler_tests.rs  benchmark_tool.rs  browser_automation.rs  browser_tool.rs  chart_generator.rs  ci_cd_tool.rs  clippy_lint_tool.rs  code_analyzer.rs  code_analyzer_tool.rs  code_analyzer_tool_tests.rs  code_executor.rs  code_quality_tool.rs  code_review.rs  code_transform.rs  config_store.rs  container_tool.rs  container_tool_tests.rs  cron_tool.rs  cross_compile.rs  crypto_tool.rs  data_processor.rs  database_tool.rs  date_time_tool.rs  db_migration.rs  dep_manager.rs  diagram.rs  diff_tool.rs  doc_generator.rs  doc_search.rs  env_file_tool.rs  env_secret.rs  evolution_tools.rs  file_tools.rs  fortune_tool.rs  fs_tools.rs  fuzz_driver.rs  git_tools.rs  (+33 more)
src/tools/builtin/code_review/: analyzer.rs  checks.rs  config.rs  mod.rs  (+4 more)
src/trading/: backtest.rs  data.rs  enhanced_backtest.rs  factor_model.rs  factor_model_ext.rs  feature_engineering.rs  fundamental.rs  fundamental_processing.rs  fundamental_strategy.rs  indicators.rs  market_regime.rs  ml.rs  mod.rs  optimizer.rs  param_optimizer.rs  portfolio_optimizer.rs  report.rs  risk_management.rs  seasonal_strategy.rs  statistical_arbitrage.rs  strategy.rs  strategy_comparison.rs  strategy_router.rs  tencent.rs  walk_forward.rs
src/tui/: dashboard.rs  mod.rs
src/ui/: mod.rs
tests/: integration_test.rs
video_gen/: Cargo.toml
