[package]
name = "cargo-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
parking_lot = "0.12"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
urlencoding = "2.1"
uuid = { version = "1.6", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
async-trait = "0.1"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
colored = "2.1"
crossterm = "0.28"
