[package]
name = "cargo-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
parking_lot = "0.12"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json", "multipart", "stream"] }
urlencoding = "2.1"
uuid = { version = "1.6", features = ["v4"] }
csv = "1.3"
rusqlite = { version = "0.30", features = ["backup", "modern_sqlite"] }
async-trait = "0.1"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
colored = "2.1"
crossterm = { version = "0.28", features = ["event-stream"] }
aes-gcm = "0.10.3"
sha2 = "0.11.0"
blake3 = "1.8.5"
ed25519-dalek = "2.2.0"
argon2 = "0.5.3"
zip = "8.6.0"
tar = "0.4.46"
minijinja = "2.20.0"
jsonwebtoken = "10.4.0"
chrono-tz = "0.10.4"
mime_guess = "2.0.5"
toml = "1.1.2"
heck = "0.5.0"
pulldown-cmark = "0.13.4"
walkdir = "2.5.0"
glob = "0.3.3"
url = "2.5.8"
image = "0.25.10"
scraper = "0.27.0"
sysinfo = "0.38.4"
base64 = "0.22"
rand = "0.8"
futures = "0.3"
libc = "0.2"
dirs-next = "2.0"
lettre = { version = "0.11.22", default-features = false, features = ["builder", "tokio1-native-tls", "smtp-transport", "hostname"] }
flate2 = "1.1.9"
genpdf = "0.2.0"
md-5 = "0.11.0"
sha1 = "0.11.0"
hex = "0.4.3"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
