[package]
name = "cargo-agent"
version = "0.1.0"
edition = "2021"
default-run = "cargo-agent"
description = "Self-evolving AI Agent CLI with 60+ tools for coding, testing, refactoring, and quantitative trading"
license = "MIT"
repository = "https://github.com/kaizhong8888-rgb/cargo-agent"
homepage = "https://kaizhong8888-rgb.github.io/cargo-agent/"
documentation = "https://github.com/kaizhong8888-rgb/cargo-agent/blob/master/README.md"
readme = "README.md"
keywords = ["ai", "agent", "cli", "rust", "llm", "coding", "mcp"]
categories = ["command-line-utilities", "development-tools"]

# ── Feature flags ─────────────────────────────────────────────
# Default: core AI agent + commonly used tools
# Use `cargo build --no-default-features` for minimal build
# Use `cargo build --features full` for everything
[features]
default = ["crypto", "compression", "sysinfo", "templates", "tui"]

# Full suite — everything except trading (which needs API keys/data)
full = ["crypto", "image", "email", "pdf", "scraper", "browser", "compression", "sysinfo", "templates", "tui", "trading"]

# Feature groups
crypto      = ["dep:aes-gcm", "dep:ed25519-dalek", "dep:argon2", "dep:sha2", "dep:blake3", "dep:jsonwebtoken", "dep:md-5", "dep:sha1"]
image       = ["dep:image"]
email       = ["dep:lettre"]
pdf         = ["dep:genpdf"]
scraper     = ["dep:scraper"]
browser     = ["dep:headless_chrome"]
compression = ["dep:zip", "dep:tar", "dep:flate2"]
sysinfo     = ["dep:sysinfo"]
templates   = ["dep:minijinja"]
tui         = ["dep:crossterm"]
trading     = []  # pure source code, no extra native deps

[dependencies]

# Core runtime & serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json", "multipart", "stream"] }
anyhow = "1.0"
thiserror = "2.0"
futures = "0.3"

# Logging & diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date / time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.4"

# Config & data formats
toml = "1.1.2"
serde_yaml = "0.9"
csv = "1.3"
urlencoding = "2.1"
url = "2.5.8"
mime_guess = "2.0.5"
base64 = "0.22"

# SQLite (memory store — always compiled, core to agent)
rusqlite = { version = "0.30", features = ["backup", "modern_sqlite"] }

# Async helpers
async-trait = "0.1"

# Concurrency
once_cell = "1.19"
lazy_static = "1.4"
rand = "0.8"

# Terminal / UI (always compiled via tui feature)
colored = "2.1"

# File system
walkdir = "2.5.0"
glob = "0.3.3"
dirs-next = "2.0"

# Text processing
regex = "1.10"
hex = "0.4.3"

# Code analysis / generation
syn = { version = "2", features = ["full", "extra-traits", "parsing", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
heck = "0.5.0"

# Identifiers
uuid = { version = "1.6", features = ["v4"] }

# System
libc = "0.2"

# ── Optional (feature-gated) ──────────────────────────────────

# Crypto suite (+ hash tool)
aes-gcm      = { version = "0.10.3", optional = true }
ed25519-dalek = { version = "2.2.0", optional = true }
argon2       = { version = "0.5.3", optional = true }
sha2         = { version = "0.11.0", optional = true }
blake3       = { version = "1.8.5", optional = true }
jsonwebtoken = { version = "10.4.0", optional = true }
md-5         = { version = "0.11.0", optional = true }
sha1         = { version = "0.11.0", optional = true }

# Image processing
image = { version = "0.25.10", optional = true }

# Email
lettre = { version = "0.11.22", default-features = false, features = ["builder", "tokio1-native-tls", "smtp-transport", "hostname"], optional = true }

# PDF generation
genpdf = { version = "0.2.0", optional = true }

# Web scraping
scraper = { version = "0.27.0", optional = true }

# Browser automation (CDP - Chrome DevTools Protocol)
headless_chrome = { version = "1.0", optional = true }

# Compression (zip, tar, gzip)
zip    = { version = "8.6.0", optional = true }
tar    = { version = "0.4.46", optional = true }
flate2 = { version = "1.1.9", optional = true }

# System monitoring
sysinfo = { version = "0.38.4", optional = true }

# Templates
minijinja = { version = "2.20.0", optional = true }

# TUI / terminal UI
crossterm = { version = "0.28", features = ["event-stream"], optional = true }

[[example]]
name = "qqq_backtest"
required-features = ["trading"]

[[example]]
name = "qqq_timeframe"
required-features = ["trading"]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
