[package]
name = "cloudsilk"
version = "0.1.0"
edition = "2021"
description = "CloudSilk — Buttery soft intimate wear for everyday luxury"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["fs"] }
