[package]
name = "lingerie-shop"
version = "0.1.0"
edition = "2021"
description = "Lingerie E-commerce Website - A modern lingerie independent online store"
authors = ["kai"]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
argon2 = "0.5"
jsonwebtoken = "9.0"
minijinja = { version = "1.0", features = ["loader"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
axum-extra = { version = "0.9", features = ["cookie", "cookie-private"] }
askama = { version = "0.12", features = ["with-axum"] }
multipart = "0.18"
futures = "0.3"
thiserror = "1.0"
rand = "0.8"
image = "0.25"
dotenvy = "0.15"
validator = { version = "0.16", features = ["derive"] }
mime_guess = "2.0"
urlencoding = "2.1"
