[package]
name = "print-pack-site"
version = "0.1.0"
edition = "2021"
description = "印刷包装独立站 - Printing & Packaging Website"
authors = ["kai"]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
maud = "0.26"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
