[package]
name = "quantitative-trading"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
anyhow = "1.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
