[package]
name = "task-manager-api"
version = "0.1.0"
edition = "2021"
description = "A production-style REST API for task management built with Axum, SQLite, and sqlx"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
assert-json-diff = "2"
tempfile = "3"

[lib]
name = "task_manager_api"
path = "src/lib.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
