[package]
name = "tauri-dev-tools"
version = "0.1.0"
description = "A Tauri 2 desktop app - Dev System Monitor & Notes"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_dev_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
hostname = "0.4"
num-cpus = "1"
sys-info = "0.9"
rustc-version-runtime = "0.2"
